@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="screensaver.digitalclock"
         name="Digital Clock Screensaver"
-        version="3.8.1"
+        version="3.9.0"
         provider-name="Vojislav Vlasic">
         <requires>
         	<import addon="xbmc.python" version="2.20.0"/>
   	</requires>
-  	<extension point="xbmc.ui.screensaver" library="default.py" />
+  	<extension point="xbmc.ui.screensaver" library="default.py"/>
   	<extension point="xbmc.addon.metadata">
-    		<summary lang="en_GB">Digital clock screensaver.</summary>
-    		<summary lang="sr_RS@latin">Čuvar ekrana digitalni sat.</summary>
+    		<summary lang="en_GB">Digital clock screensaver</summary>
+    		<summary lang="sr_RS@latin">Čuvar ekrana digitalni sat</summary>
     		<description lang="en_GB">Digital clock screensaver with date, now playing information, weather information, image slideshow and several options.</description>
     		<description lang="sr_RS@latin">Čuvar ekrana digitalni sat sa datumom, podacima o trenutnoj reprodukciji, podacima o vremenskoj prognozi, reprodukcijom slajdova slika i nekoliko opcija.</description>
     		<disclaimer lang="en_GB">For bugs, requests or general questions visit the Digital clock screensaver thread on the Kodi forum.</disclaimer>
